Fix syntax highlighting with unicode characters

Applied yet another hacky fix to the syntax highlighting issue that keeps
cropping up with various combinations of unicode characters. Cross your fingers!

Also noticed a few other bugs happened to be fixed either by this change
or by previous refactoring during the port to Qt6.

BUG: 487636
BUG: 482078
BUG: 475234
BUG: 485691